Fixing zoom range control not showing in IE and Edge

--- a/dev/scss/_nav.scss
+++ b/dev/scss/_nav.scss
@@ -69,8 +69,9 @@ nav {
       border: 1px solid #fff;
       color: #fff;
 
-      &:hover {
+      &:hover, &:focus {
         background-color: $r6-blue;
+        text-shadow: none;
       }
     }
   }
